# HeartBridge

./: .gitmodules
CPR Machine/: platformio.ini
CPR Machine V2/: CMakeLists.txt
CPR Machine V2/Hello World/: hello.cpp
CPR Machine V2/include/: actuation.hpp  error_codes.hpp  hmi.hpp  multi_system.hpp  sensing.hpp
CPR Machine V2/src/: actuation.cpp  hmi.cpp  main.cpp  multi_system.cpp  sensing.cpp
CPR Machine VPython/: .gitignore  HMI.py  README.md  actuation.py  error_codes.py  main.py  requirements.txt  sensing.py  states.py
CPR Machine VPython/scripts/: I2C_scanner.py
CPR Machine VPython/src/: HMI.py  actuation.py  error_codes.py  main.py  motor.py  multi_system.py  sensing.py  states.py
CPR Machine VPython/src/Enums/: control_modes.py  error_codes.py
CPR Machine VPython/tests/: README_TESTING.md  conftest.py  test_actuation.py  test_hmi.py  test_main.py  test_sensing.py
CPR Machine/include/: HMI_utils.h
CPR Machine/src/MotorController/: HMI_utils.cpp  (+2 more)
HB V2/Printing Files/: Egg Bottom.3mf  Egg Bottom.step  Egg Middle.3mf  Egg Middle.step  Egg Top.3mf  Egg Top.step  Laser Holder.step  Screen Bracket.step  Screen Bracket.usdz  ToF Rack Plate.step
M4/: SimulinkSetup.mlx
M6/CPR Machine Schematic/: #auto_saved_files#  CPR Machine Schematic.csv  CPR Machine Schematic.kicad_pcb  CPR Machine Schematic.kicad_prl  CPR Machine Schematic.kicad_pro  CPR Machine Schematic.kicad_sch  HMI_Raspi.kicad_sch  Power.kicad_sch  Raspi.kicad_sch  Sensing.kicad_sch  fabrication-toolkit-options.json  fp-info-cache  sym-lib-table  ~CPR Machine Schematic.kicad_pcb.lck
(+7 files in other folders)
